<resources>
    <string name="app_name">Maebie</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_address">Enter email address</string>
    <string name="password">Password</string>
    <string name="login_home">LOGIN</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="SignUp">New User|SignUp</string>
    <string name="full_name">Name</string>
    <string name="create_password">Password(Min 8 characters)</string>
    <string name="confirm_password">Confirm_Password</string>
    <string name="sign_up_home">Sign Up</string>
    <string name="our">our</string>
    <string name="terms">terms</string>
    <string name="Already_User">Already Have An Account|Sign In</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
