<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:paddingTop="@dimen/_20sdp"
        android:paddingBottom="@dimen/_30sdp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:paddingRight="@dimen/_30sdp"
            android:paddingLeft="@dimen/_30sdp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_weight=".8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:scaleType="centerInside"
                    android:src="@drawable/user_icon"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp" />
            </LinearLayout>
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/txt_fullName"
                android:layout_marginTop="@dimen/_3sdp"
                android:textColorHint="#7344bad4"
                android:background="@color/transparent"
                android:maxLines="1"
                android:singleLine="true"
                android:layout_weight=".2"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#7344bad4"
                android:hint="@string/full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <View
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/view_color"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <LinearLayout
            android:layout_marginTop="@dimen/_20sdp"
            android:paddingRight="@dimen/_30sdp"
            android:paddingLeft="@dimen/_30sdp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_weight=".8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:scaleType="centerInside"
                    android:src="@drawable/email"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp" />
            </LinearLayout>

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/txt_EmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_weight=".2"
                android:singleLine="true"
                android:ems="10"
                android:background="@android:color/transparent"
                android:inputType="textEmailAddress"
                android:hint="@string/email_address"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#7344bad4"
                android:textColorHint="#7344bad4" />
        </LinearLayout>
        <View
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/view_color"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

    <LinearLayout
        android:layout_marginTop="@dimen/_20sdp"
        android:paddingRight="@dimen/_30sdp"
        android:paddingLeft="@dimen/_30sdp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_weight=".8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:scaleType="centerInside"
                android:src="@drawable/password_icon"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp" />
        </LinearLayout>
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/txtCreatePassword"
            android:inputType="textPassword"
            android:layout_marginTop="@dimen/_3sdp"
            android:background="@color/transparent"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_weight=".2"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#7344bad4"
            android:hint="@string/create_password"
            android:textColorHint="#7344bad4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:layout_marginLeft="@dimen/_30sdp"
        android:layout_marginRight="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/view_color"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <LinearLayout
        android:layout_marginTop="@dimen/_20sdp"
        android:paddingRight="@dimen/_30sdp"
        android:paddingLeft="@dimen/_30sdp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_weight=".8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:scaleType="centerInside"
                android:src="@drawable/password_icon"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp" />
        </LinearLayout>
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/txt_confirmPassword"
            android:inputType="textPassword"
            android:textColorHint="#7344bad4"
            android:layout_marginTop="@dimen/_3sdp"
            android:background="@color/transparent"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_weight=".2"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#7344bad4"
            android:hint="@string/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:layout_marginLeft="@dimen/_30sdp"
        android:layout_marginRight="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/view_color"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>


        <ProgressBar
            android:id="@+id/SignUpprogressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:visibility="invisible"
            android:layout_height="wrap_content" />


        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/txtSignUpBtn"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:background="@drawable/button_gradient"
            android:gravity="center"
            android:enabled="false"
            android:text="@string/sign_up_home"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#50ffffff" />
        <LinearLayout
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_30sdp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:scaleType="centerInside"
                android:src="@drawable/fb_icon"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp" />
            <ImageView
                android:layout_marginLeft="@dimen/_12sdp"
                android:scaleType="centerInside"
                android:src="@drawable/google_plus_icon"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp" />
        </LinearLayout>




        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/Already_user"
            android:textColor="@color/forgot_password_color"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/Already_User"
            android:clickable="true"
            android:padding="@dimen/_10sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <android.support.v7.widget.AppCompatEditText
            android:layout_gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:layout_marginTop="@dimen/_25sdp"
            android:textColor="@color/agreeing"
            android:text="By Click on Sign Up, you are agreeing with"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatTextView
                android:layout_gravity="center"
                android:text="@string/our"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <android.support.v7.widget.AppCompatTextView
                android:textColor="@color/walkthrough_black"
                android:layout_marginLeft="@dimen/_2sdp"
                android:text="@string/terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>


    </LinearLayout>


      </android.support.v4.widget.NestedScrollView>