<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:scaleType="centerInside"
                android:src="@drawable/clikkart_logo"
                android:layout_width="match_parent"
                android:layout_marginTop="40dp"
                android:layout_height="match_parent" />


            <LinearLayout
                android:layout_marginTop="50dp"
                android:paddingRight="@dimen/_30sdp"
                android:paddingLeft="@dimen/_30sdp"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_weight=".8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:scaleType="centerInside"
                        android:src="@drawable/email"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp" />
                </LinearLayout>
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/sign_in_email"
                    android:paddingRight="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:layout_weight=".2"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:textSize="20dp"
                    android:ems="10"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="#7344bad4"
                    android:hint="@string/email_address"
                    android:textColorHint="#7344bad4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <View
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/view_color"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <LinearLayout
                android:layout_marginTop="@dimen/_20sdp"
                android:paddingRight="@dimen/_30sdp"
                android:paddingLeft="@dimen/_30sdp"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_weight=".3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:scaleType="centerInside"
                        android:src="@drawable/password_icon"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp" />
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/sign_in_password"
                    android:textColorHint="#7344bad4"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:background="@color/transparent"
                    android:gravity="center"
                    android:layout_weight=".1"
                    android:textSize="20dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="#7344bad4"
                    android:hint="@string/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:id="@+id/ll_show_password"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_weight=".3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/iv_showPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_11sdp"
                        android:scaleType="centerInside"
                        android:src="@drawable/show_password_icon" />
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/view_color"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/sign_in_forgot_password"
                android:textColor="@color/forgot_password_color"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:text="@string/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ProgressBar
                android:id="@+id/SignInprogressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_marginTop="30dp"
                android:visibility="invisible"
                android:layout_height="wrap_content" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/signin_btn"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:background="@drawable/button_gradient"
                android:gravity="center"
                android:enabled="false"
                android:text="@string/login_home"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#50ffffff" />

            <View
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/view_color"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/NewUser"
                android:textColor="@color/forgot_password_color"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="@dimen/_30sdp"
                android:text="@string/SignUp"
                android:clickable="true"
                android:padding="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </LinearLayout>




</androidx.core.widget.NestedScrollView>
            </LinearLayout>